--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex [Luan Ferreira]</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -14,7 +13,28 @@
 <body>
     
     <main>
-        <img src="img/pokedex.png" alt="moldura da pokédex">
+        <img src="" alt="pokemon" class="pokemon__image">
+
+        <h1 class="pokemon__data">
+            <span class="pokemon__number">6</span> - 
+            <span class="pokemon__name">charizard</span>
+        </h1>
+
+        <form class="form">
+            <input
+                type="search"
+                class="input__search"
+                placeholder="Nome ou Número:"
+                required
+            />
+        </form>
+
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt</button>
+            <button class="button btn-next">Next &gt</button>
+        </div>
+
+        <img src="img/pokedex.png" alt="moldura da pokédex" class="pokedex">
     </main>
 
 </body>
